# anime-episode-parser

./: .pre-commit-config.yaml  .yamllint  README.md  pyproject.toml  setup.cfg
.chglog/: config.yml
.github/: contributing.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  lint.yaml  release.yaml
anime_episode_parser/: __init__.py  cn.py
tests/: conftest.py  test_utils.py
