[build-system]
requires = ["flit-core==3.12.0"]
build-backend = "flit_core.buildapi"

[project]
name = "anime-episode-parser"
version = "0.0.13"
description = 'A library to parse episode info from anime title'
authors = [
  { name = "Trim21", email = "trim21.me@gmail.com" },
  { name = "RicterZ", email = "ricterzheng@gmail.com" },
]
readme = 'README.md'
license = 'MIT'
keywords = ['anime']
requires-python = ">=3.9,<4"
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Other Audience',
  'Natural Language :: Chinese (Traditional)',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy'
]

[project.urls]
homepage = 'https://github.com/BGmi/anime-episode-parser'
repository = 'https://github.com/BGmi/anime-episode-parser'

[dependency-groups]
dev = ["coverage>=7.7.0", "mypy>=1.15.0", "pytest>=8.3.5"]

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'if TYPE_CHECKING:',
  'if __name__  "__main__":',
  'if typing.TYPE_CHECKING:',
  'raise NotImplementedError'
]

[tool.isort]
default_section = 'THIRDPARTY'
indent = '    '
known_first_party = 'anime_episode_parser'
length_sort = true
line_length = 88
multi_line_output = 3
no_lines_before = 'LOCALFOLDER'
use_parentheses = true
include_trailing_comma = true

[tool.pytest.ini_options]
addopts = '-rqa'

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[tool.ruff.lint]
select = [
  "B",
  "C",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "W",
  "BLE",
  #  "DJ",
  "ERA",
  "EXE",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  #  "DTZ",
  #  "PTH",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TC",
  "TID",
  "TRY",
  "YTT",
]
ignore = [
  'PLR0911',
  'INP001',
  'N806',
  'N802',
  'N803',
  'E501',
  'BLE001',
  'RUF002',
  'S301',
  'S314',
  'S101',
  'N815',
  'S104',
  'C901',
  'ISC003',
  'PLR0913',
  'I001',
  'RUF001',
  'SIM108',
  'TC003',
  'RUF003',
  'RET504',
  'TRY300',
  'TRY003',
  'TRY201',
  'TRY301',
  'PLR0912',
  'PLR0915',
  'PLR2004',
  'PGH003',
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ['ALL']
